--- a/roles/install_lazyvim/tasks/main.yml
+++ b/roles/install_lazyvim/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for install_lazyvim
 - name: "Install Lazyvim"
-  tags: install_lazyvim
+  tags: lazyvim
   ansible.builtin.git:
     repo: "git@github.com:Jobin-Nelson/lazyvim_config.git"
     dest: "{{ ansible_env.HOME }}/.config/nvim"
