add update to false for git modules

--- a/roles/setup_aur/tasks/archlinux.yml
+++ b/roles/setup_aur/tasks/archlinux.yml
@@ -19,6 +19,7 @@
   ansible.builtin.git:
     repo: "https://aur.archlinux.org/paru.git"
     dest: "/tmp/paru"
+    update: false
 
 - name: "Install Paru"
   when: paru_exists is failed
