--- a/roles/install_lazyvim/tasks/main.yml
+++ b/roles/install_lazyvim/tasks/main.yml
@@ -5,4 +5,4 @@
   ansible.builtin.git:
     repo: "git@github.com:Jobin-Nelson/lazyvim_config.git"
     dest: "{{ ansible_env.HOME }}/.config/nvim"
-    update: no
+    update: false
