--- a/main.yaml
+++ b/main.yaml
@@ -9,8 +9,11 @@
     - role: install_python
       tags: python
 
-    - role: install_lazyvim
-      tags: lazyvim
+    - role: install_astronvim
+      tags: astronvim
+
+    # - role: install_lazyvim
+    #   tags: lazyvim
 
     - role: install_rust
       tags: rust
