feat: add tag nvm for install nvm role

--- a/roles/install_nvm/tasks/main.yml
+++ b/roles/install_nvm/tasks/main.yml
@@ -5,7 +5,7 @@
   args:
     creates: "{{ ansible_env.HOME }}/.config/nvm/nvm.sh"
 
-- name: "Install node"
+- name: "Install Node"
   ansible.builtin.shell: /bin/bash -c "source {{ ansible_env.HOME }}/.config/nvm/nvm.sh && nvm install 21 && nvm alias default 21"
   args:
     creates: "{{ ansible_env.HOME }}/.config/nvm/alias"
