--- a/roles/setup_dotfiles/handlers/main.yml
+++ b/roles/setup_dotfiles/handlers/main.yml
@@ -5,3 +5,4 @@
     mkdir -p $HOME/playground/backup && mv $HOME/.{bash_profile,bashrc} $_
     /usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME config --local status.showUntrackedFiles no
     /usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME checkout
+    /usr/bin/git --git-dir=$HOME/.dotfiles/ --work-tree=$HOME submodule update --init
