--- a/main.yaml
+++ b/main.yaml
@@ -9,6 +9,9 @@
     - role: install_packages
       tags: packages
 
+    - role: install_fonts
+      tags: fonts
+
     - role: install_python
       tags: python
 
