feat: add jetbrains, hack, meslo, sourcecodepro to pacman packages

--- a/roles/install_packages/tasks/archlinux.yml
+++ b/roles/install_packages/tasks/archlinux.yml
@@ -30,6 +30,10 @@
       - netcat
       - neofetch
       - flatpak
+      - ttf-jetbrains-mono-nerd
+      - ttf-hack-nerd
+      - ttf-meslo-nerd
+      - ttf-sourcecodepro-nerd
     state: latest
     update_cache: true
 
