--- a/main.yaml
+++ b/main.yaml
@@ -9,8 +9,8 @@
     - role: install_packages
       tags: packages
 
-    - role: install_fonts
-      tags: fonts
+    # - role: install_fonts
+    #   tags: fonts
 
     - role: install_python
       tags: python
@@ -21,8 +21,8 @@
     - role: install_rust
       tags: rust
 
-    - role: install_astronvim
-      tags: astronvim
+    # - role: install_astronvim
+    #   tags: astronvim
 
     # - role: install_lazyvim
     #   tags: lazyvim
