fix: remove comma after true for accept_newhostkey for dotfile role

--- a/roles/setup_dotfiles/tasks/main.yml
+++ b/roles/setup_dotfiles/tasks/main.yml
@@ -6,5 +6,5 @@
     dest: "{{ ansible_env.HOME }}/.dotfiles"
     bare: true
     update: true
-    accept_newhostkey: true,
+    accept_newhostkey: true
   notify: checkout_dotfiles
