--- a/roles/install_rust/tasks/main.yml
+++ b/roles/install_rust/tasks/main.yml
@@ -1,7 +1,7 @@
 ---
 # tasks file for install_rust
 - name: "Check if cargo is installed"
-  shell: "command -v cargo"
+  shell: "command -v cargo &> /dev/null"
   register: cargo_exists
   ignore_errors: yes
 
