--- a/local.yml
+++ b/local.yml
@@ -7,9 +7,6 @@
     - role: install_packages
       tags: packages
 
-    - role: setup_aur
-      tags: paru
-
     - role: setup_dotfiles
       tags: dotfiles
 
@@ -22,6 +19,9 @@
     - role: install_rust
       tags: rust
 
+    - role: install_go
+      tags: go
+
     # - role: install_astronvim
     #   tags: astronvim
 
@@ -30,4 +30,7 @@
 
     # - role: install_fonts
     #   tags: fonts
+
+    - role: setup_aur
+      tags: paru
 
