--- a/roles/install_nvm/tasks/main.yml
+++ b/roles/install_nvm/tasks/main.yml
@@ -3,9 +3,9 @@
 - name: "Install NVM"
   ansible.builtin.shell: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
   args:
-    creates: "{{ ansible_env.HOME }}/.config/nvm/nvm.sh"
+    creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
 
 - name: "Install Node"
-  ansible.builtin.shell: /bin/bash -c "source {{ ansible_env.HOME }}/.config/nvm/nvm.sh && nvm install 21 && nvm alias default 21"
+  ansible.builtin.shell: /bin/bash -c "source {{ ansible_env.HOME }}/.nvm/nvm.sh && nvm install 21 && nvm alias default 21"
   args:
-    creates: "{{ ansible_env.HOME }}/.config/nvm/alias"
+    creates: "{{ ansible_env.HOME }}/.nvm/alias"
