--- a/roles/install_packages/tasks/archlinux.yml
+++ b/roles/install_packages/tasks/archlinux.yml
@@ -34,6 +34,8 @@
       - ttf-hack-nerd
       - ttf-meslo-nerd
       - ttf-sourcecodepro-nerd
+      - net-tools
+      - gnome-browser-connector
     state: latest
     update_cache: true
 
