feat: add setup_hyprland role

--- a/local.yml
+++ b/local.yml
@@ -25,6 +25,9 @@
     - role: setup_aur
       tags: paru
 
+    - role: setup_hyprland
+      tags: hyprland
+
     # - role: install_astronvim
     #   tags: astronvim
 
