feat: add sddm in setup_hyprland role

--- a/roles/setup_hyprland/tasks/archlinux.yml
+++ b/roles/setup_hyprland/tasks/archlinux.yml
@@ -20,6 +20,7 @@
       - network-manager-applet
       - blueman
       - wlr-randr
+      - sddm
       - wofi
     state: latest
     update_cache: true
