--- a/roles/install_packages/tasks/archlinux.yml
+++ b/roles/install_packages/tasks/archlinux.yml
@@ -34,6 +34,9 @@
       - ttf-hack-nerd
       - ttf-meslo-nerd
       - ttf-sourcecodepro-nerd
+      - ttf-cascadia-code-nerd
+      - ttf-ubuntu-mono-nerd
+      - ttf-roboto-mono-nerd
       - net-tools
     state: latest
     update_cache: true
