feat: add group and service handlers for docker

--- a/roles/install_packages/handlers/main.yml
+++ b/roles/install_packages/handlers/main.yml
@@ -13,3 +13,18 @@
     name: "syncthing@{{ ansible_env.USER }}"
     state: started
     enabled: yes
+
+- name: start_docker
+  become: true
+  ansible.builtin.service:
+    name: docker
+    state: started
+    enabled: yes
+
+- name: start_docker
+  become: true
+  ansible.builtin.user:
+    name: "{{ ansible_env.USER }}"
+    groups: docker
+    append: true
+  
