feat: add recursive nerd font and bash-completion to install_package role

--- a/roles/install_packages/tasks/archlinux.yml
+++ b/roles/install_packages/tasks/archlinux.yml
@@ -36,7 +36,9 @@
       - ttf-cascadia-code-nerd
       - ttf-ubuntu-mono-nerd
       - ttf-roboto-mono-nerd
+      - ttf-recursive-nerd
       - net-tools
+      - bash-completion
     state: latest
     update_cache: true
 
