feat: add docker-compose to install_packages role

--- a/roles/install_packages/tasks/archlinux.yml
+++ b/roles/install_packages/tasks/archlinux.yml
@@ -59,7 +59,9 @@
 - name: "Install Docker"
   become: true
   community.general.pacman:
-    name: docker
+    name: 
+      - docker
+      - docker-compose
     state: present
   notify: start_docker
 
