--- a/roles/install_node/tasks/main.yml
+++ b/roles/install_node/tasks/main.yml
@@ -1,5 +1,9 @@
 ---
 # tasks file for install_node
-- name: "Setup AUR"
-  import_tasks: archlinux.yml
+- name: "Install Node in Archlinux"
+  ansible.builtin.import_tasks: archlinux.yml
   when: ansible_facts['os_family'] | lower == 'archlinux'
+
+- name: "Install Node in Ubuntu"
+  ansible.builtin.import_tasks: ubuntu.yml
+  when: ansible_distribution == 'Ubuntu'
