--- a/roles/install_rust/tasks/main.yml
+++ b/roles/install_rust/tasks/main.yml
@@ -1,13 +1,13 @@
 ---
 # tasks file for install_rust
 - name: "Check if cargo is installed"
-  shell: "command -v cargo &> /dev/null"
+  ansible.builtin.shell: "command -v cargo"
   register: cargo_exists
   ignore_errors: yes
 
 - name: "Download Rust"
   when: cargo_exists is failed
-  get_url:
+  ansible.builtin.get_url:
     url: "https://sh.rustup.rs"
     dest: "/tmp/sh.rustup.rs"
     mode: "0755"
@@ -15,8 +15,8 @@
 
 - name: "Install Rust"
   when: cargo_exists is failed
-  shell: "/tmp/sh.rustup.rs -y"
+  ansible.builtin.shell: "/tmp/sh.rustup.rs -y"
 
 - name: "Install Rust Analyzer"
   when: cargo_exists is failed
-  shell: ". $HOME/.cargo/env && rustup component add rust-analyzer"
+  ansible.builtin.shell: ". $HOME/.cargo/env && rustup component add rust-analyzer"
