--- a/roles/install_python/tasks/ubuntu.yml
+++ b/roles/install_python/tasks/ubuntu.yml
@@ -1,6 +1,8 @@
 - name: "Installing Python in ubuntu"
   become: true
   ansible.builtin.apt:
-    name: python3.11
+    name: 
+      - python3.11
+      - python3.11-venv
     state: latest
     update_cache: true
