--- a/roles/install_node/tasks/ubuntu.yml
+++ b/roles/install_node/tasks/ubuntu.yml
@@ -1,18 +1,7 @@
-- name: Install the gpg key for nodejs LTS
-  become: true
-  apt_key:
-    url: "https://deb.nodesource.com/gpgkey/nodesource.gpg.key"
-    state: present
-
-- name: Installing the nodejs LTS repos
-  become: true
-  ansible.builtin.apt_repository:
-    repo: "deb https://deb.nodesource.com/node_20.x {{ ansible_distribution_release }} main"
-    state: present
-    update_cache: yes
-
-- name: Install the nodejs
+- name: Install build requirements for nvm
   become: true
   ansible.builtin.apt:
-    name: nodejs
+    name:
+      - build-essential
+      - libssl-dev
     state: present
