chore: remove installing rust analyzer

--- a/roles/install_go/tasks/main.yml
+++ b/roles/install_go/tasks/main.yml
@@ -3,3 +3,7 @@
 - name: "Install Go"
   import_tasks: archlinux.yml
   when: ansible_facts['os_family'] | lower == 'archlinux'
+
+- name: "Install Ubuntu Packages"
+  ansible.builtin.import_tasks: ubuntu.yml
+  when: ansible_distribution == 'Ubuntu'
