--- a/roles/install_nvm/tasks/main.yml
+++ b/roles/install_nvm/tasks/main.yml
@@ -1,11 +1,11 @@
 ---
 # tasks file for install_nvm
 - name: "Install NVM"
-  ansible.builtin.shell: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.39.7/install.sh | bash
+  ansible.builtin.shell: curl -o- https://raw.githubusercontent.com/nvm-sh/nvm/v0.40.1/install.sh | bash
   args:
     creates: "{{ ansible_env.HOME }}/.nvm/nvm.sh"
 
 - name: "Install Node"
-  ansible.builtin.shell: /bin/bash -c "source {{ ansible_env.HOME }}/config/.nvm/nvm.sh && nvm install 21 && nvm alias default 21"
+  ansible.builtin.shell: /bin/bash -c "source {{ ansible_env.HOME }}/config/.nvm/nvm.sh && nvm install node"
   args:
     creates: "{{ ansible_env.HOME }}/.nvm/alias"
